--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <main>
-        <div class="first-container"></div>
+        <div class="first-container">
+
+        </div>
+        <div>
+            
+        </div>
     </main>
 </body>
 </html>
