--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <div class="first-container">
-            <h1></h1>
+            <h1>The best sounding drum module</h1>
         </div>
         <div>
 
