--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <main>
         <div class="first-container">
             <h1>The best sounding drum module</h1>
+            <p>..that money can buy</p>
         </div>
         <div>
 
