--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
                     <path d="M28.0272 4.85355C28.2225 4.65829 28.2225 4.34171 28.0272 4.14645L24.8452 0.964466C24.65 0.769204 24.3334 0.769204 24.1381 0.964466C23.9429 1.15973 23.9429 1.47631 24.1381 1.67157L26.9665 4.5L24.1381 7.32843C23.9429 7.52369 23.9429 7.84027 24.1381 8.03553C24.3334 8.2308 24.65 8.2308 24.8452 8.03553L28.0272 4.85355ZM0.673645 5H27.6736V4H0.673645V5Z" fill="black"/>
                     </svg>
             </div>
-            
         </div>
         <div>
-
+            <img src="./dram-1.jpeg" alt="dram">
         </div>
     </main>
 </body>
