--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     </svg>
             </div>
         </div>
-        <div>
-            <img src="./dram-1.jpeg" alt="dram">
+        <div class="second-container">
+            
         </div>
     </main>
 </body>
