--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="second-container">
-            
+            <div></div>
         </div>
     </main>
 </body>
