--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
         <div class="second-container">
             <div></div>
+            <div></div>
         </div>
     </main>
 </body>
