--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <div class="second-container">
             <div></div>
             <div></div>
+            <div></div>
+            <div></div>
         </div>
     </main>
 </body>
