--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             </div>
         </div>
         <div class="second-container">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
         </div>
     </main>
 </body>
