--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div class="first-container">
-            <h1>The best sounding drum module</h1>
+            <h1>The best sounding <br> drum module</h1>
             <p>..that money can buy</p>
             <div class="link-container">
                 <a href="#">Shop drum kits</a>
